[package]
name = "silent-threshold-encryption"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = { version = "0.5.0", features = ["html_reports"] }
ark-std = { version = "0.5.0", features = ["print-trace"] }
ark-ec = { version = "0.5.0" }
ark-ff = { version = "0.5.0" }
ark-poly = { version = "0.5.0" }
ark-bls12-381 = { version = "0.5.0" }
ark-serialize = { version = "0.5.0" }
rand = { version = "0.9.1" }

rayon = { version = "1.5.1" }

[features]
asm = ["ark-ff/asm"]

[profile.dev]
opt-level = 3

[[bench]]
name = "encryption"
harness = false

[[bench]]
name = "decryption"
harness = false

[[bench]]
name = "setup"
harness = false
